// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MdnsProxySettingsForm should render the form correctly 1`] = `
<DocumentFragment>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-row"
    >
      <div
        class="ant-col ant-col-8"
      >
        <h3
          class="ant-typography styledComponents__Title-sc-1ibvcih-3 dConwg"
        >
          Settings
        </h3>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class="ant-form-item-required"
                for="name"
                title="Service Name"
              >
                Service Name
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <span
                    class="ant-input-affix-wrapper ant-input-affix-wrapper-has-feedback"
                  >
                    <input
                      class="ant-input"
                      id="name"
                      type="text"
                      value=""
                    />
                    <span
                      class="ant-input-suffix"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="tags"
                title="Tags"
              >
                Tags
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="tags"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="forwardingRules"
                title="Forwarding Rules"
              >
                Forwarding Rules
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="styledComponents__Wrapper-sc-1abm7iv-12 cbnATm"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                      style="display: flex; justify-content: flex-end;"
                    >
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                          type="button"
                        >
                          <span>
                            Add Rule
                          </span>
                        </button>
                      </div>
                    </div>
                    <div
                      class="ant-pro-table"
                    >
                      <div
                        class="ant-pro-card"
                      >
                        <div
                          class="ant-pro-card-body"
                          style="padding-top: 0px;"
                        >
                          <div
                            class="ant-pro-table-list-toolbar"
                          >
                            <div
                              class="ant-pro-table-list-toolbar-container"
                            >
                              <div
                                class="ant-pro-table-list-toolbar-left"
                              />
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-setting-items"
                                  >
                                    <div
                                      class="ant-space-item"
                                    >
                                      <div
                                        class="ant-pro-table-list-toolbar-setting-item"
                                      >
                                        <svg>
                                          SettingsOutlined.svg
                                        </svg>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-table-wrapper"
                          >
                            <div
                              class="ant-spin-nested-loading"
                            >
                              <div
                                class="ant-spin-container"
                              >
                                <div
                                  class="ant-table ant-table-middle ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                                >
                                  <div
                                    class="ant-table-container"
                                  >
                                    <div
                                      class="ant-table-content"
                                      style="overflow-x: auto; overflow-y: hidden;"
                                    >
                                      <table
                                        style="min-width: 100%; table-layout: auto;"
                                      >
                                        <colgroup>
                                          <col
                                            class="ant-table-selection-col"
                                          />
                                          <col />
                                          <col />
                                          <col />
                                          <col
                                            style="width: 32px;"
                                          />
                                        </colgroup>
                                        <thead
                                          class="ant-table-thead"
                                        >
                                          <tr>
                                            <th
                                              class="ant-table-cell ant-table-selection-column react-resizable"
                                            >
                                              <div
                                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                              />
                                              <div
                                                class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                              />
                                            </th>
                                            <th
                                              class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                              tabindex="0"
                                            >
                                              <div
                                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                              />
                                              <div
                                                class="ant-table-column-sorters"
                                              >
                                                <span
                                                  class="ant-table-column-title"
                                                >
                                                  Type
                                                </span>
                                                <span
                                                  class="ant-table-column-sorter ant-table-column-sorter-full"
                                                >
                                                  <span
                                                    class="ant-table-column-sorter-inner"
                                                  >
                                                    <span
                                                      aria-label="caret-up"
                                                      class="anticon anticon-caret-up ant-table-column-sorter-up"
                                                      role="img"
                                                    >
                                                      <svg
                                                        aria-hidden="true"
                                                        data-icon="caret-up"
                                                        fill="currentColor"
                                                        focusable="false"
                                                        height="1em"
                                                        viewBox="0 0 1024 1024"
                                                        width="1em"
                                                      >
                                                        <path
                                                          d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                                        />
                                                      </svg>
                                                    </span>
                                                    <span
                                                      aria-label="caret-down"
                                                      class="anticon anticon-caret-down ant-table-column-sorter-down"
                                                      role="img"
                                                    >
                                                      <svg
                                                        aria-hidden="true"
                                                        data-icon="caret-down"
                                                        fill="currentColor"
                                                        focusable="false"
                                                        height="1em"
                                                        viewBox="0 0 1024 1024"
                                                        width="1em"
                                                      >
                                                        <path
                                                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                                        />
                                                      </svg>
                                                    </span>
                                                  </span>
                                                </span>
                                              </div>
                                              <div
                                                class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                              />
                                            </th>
                                            <th
                                              class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                              tabindex="0"
                                            >
                                              <div
                                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                              />
                                              <div
                                                class="ant-table-column-sorters"
                                              >
                                                <span
                                                  class="ant-table-column-title"
                                                >
                                                  From VLAN
                                                </span>
                                                <span
                                                  class="ant-table-column-sorter ant-table-column-sorter-full"
                                                >
                                                  <span
                                                    class="ant-table-column-sorter-inner"
                                                  >
                                                    <span
                                                      aria-label="caret-up"
                                                      class="anticon anticon-caret-up ant-table-column-sorter-up"
                                                      role="img"
                                                    >
                                                      <svg
                                                        aria-hidden="true"
                                                        data-icon="caret-up"
                                                        fill="currentColor"
                                                        focusable="false"
                                                        height="1em"
                                                        viewBox="0 0 1024 1024"
                                                        width="1em"
                                                      >
                                                        <path
                                                          d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                                        />
                                                      </svg>
                                                    </span>
                                                    <span
                                                      aria-label="caret-down"
                                                      class="anticon anticon-caret-down ant-table-column-sorter-down"
                                                      role="img"
                                                    >
                                                      <svg
                                                        aria-hidden="true"
                                                        data-icon="caret-down"
                                                        fill="currentColor"
                                                        focusable="false"
                                                        height="1em"
                                                        viewBox="0 0 1024 1024"
                                                        width="1em"
                                                      >
                                                        <path
                                                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                                        />
                                                      </svg>
                                                    </span>
                                                  </span>
                                                </span>
                                              </div>
                                              <div
                                                class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                              />
                                            </th>
                                            <th
                                              class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                              tabindex="0"
                                            >
                                              <div
                                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                              />
                                              <div
                                                class="ant-table-column-sorters"
                                              >
                                                <span
                                                  class="ant-table-column-title"
                                                >
                                                  To VLAN
                                                </span>
                                                <span
                                                  class="ant-table-column-sorter ant-table-column-sorter-full"
                                                >
                                                  <span
                                                    class="ant-table-column-sorter-inner"
                                                  >
                                                    <span
                                                      aria-label="caret-up"
                                                      class="anticon anticon-caret-up ant-table-column-sorter-up"
                                                      role="img"
                                                    >
                                                      <svg
                                                        aria-hidden="true"
                                                        data-icon="caret-up"
                                                        fill="currentColor"
                                                        focusable="false"
                                                        height="1em"
                                                        viewBox="0 0 1024 1024"
                                                        width="1em"
                                                      >
                                                        <path
                                                          d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                                        />
                                                      </svg>
                                                    </span>
                                                    <span
                                                      aria-label="caret-down"
                                                      class="anticon anticon-caret-down ant-table-column-sorter-down"
                                                      role="img"
                                                    >
                                                      <svg
                                                        aria-hidden="true"
                                                        data-icon="caret-down"
                                                        fill="currentColor"
                                                        focusable="false"
                                                        height="1em"
                                                        viewBox="0 0 1024 1024"
                                                        width="1em"
                                                      >
                                                        <path
                                                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                                        />
                                                      </svg>
                                                    </span>
                                                  </span>
                                                </span>
                                              </div>
                                              <div
                                                class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                              />
                                            </th>
                                            <th
                                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first react-resizable"
                                              style="position: sticky; right: 0px;"
                                            >
                                              <div
                                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                              />
                                              <div
                                                class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                              />
                                            </th>
                                          </tr>
                                        </thead>
                                        <tbody
                                          class="ant-table-tbody"
                                        >
                                          <tr
                                            aria-hidden="true"
                                            class="ant-table-measure-row"
                                            style="height: 0px; font-size: 0px;"
                                          >
                                            <td
                                              style="padding: 0px; border: 0px; height: 0px;"
                                            >
                                              <div
                                                style="height: 0px; overflow: hidden;"
                                              >
                                                 
                                              </div>
                                            </td>
                                            <td
                                              style="padding: 0px; border: 0px; height: 0px;"
                                            >
                                              <div
                                                style="height: 0px; overflow: hidden;"
                                              >
                                                 
                                              </div>
                                            </td>
                                            <td
                                              style="padding: 0px; border: 0px; height: 0px;"
                                            >
                                              <div
                                                style="height: 0px; overflow: hidden;"
                                              >
                                                 
                                              </div>
                                            </td>
                                            <td
                                              style="padding: 0px; border: 0px; height: 0px;"
                                            >
                                              <div
                                                style="height: 0px; overflow: hidden;"
                                              >
                                                 
                                              </div>
                                            </td>
                                            <td
                                              style="padding: 0px; border: 0px; height: 0px;"
                                            >
                                              <div
                                                style="height: 0px; overflow: hidden;"
                                              >
                                                 
                                              </div>
                                            </td>
                                          </tr>
                                          <tr
                                            class="ant-table-placeholder"
                                          >
                                            <td
                                              class="ant-table-cell"
                                              colspan="5"
                                            >
                                              <div
                                                class="ant-table-expanded-row-fixed"
                                                style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                              />
                                            </td>
                                          </tr>
                                        </tbody>
                                      </table>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`MdnsProxySettingsForm should render the form with the data correctly 1`] = `
<DocumentFragment>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-row"
    >
      <div
        class="ant-col ant-col-8"
      >
        <h3
          class="ant-typography styledComponents__Title-sc-1ibvcih-3 dConwg"
        >
          Settings
        </h3>
        <div
          class="ant-form-item ant-form-item-has-feedback ant-form-item-has-success"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class="ant-form-item-required"
                for="name"
                title="Service Name"
              >
                Service Name
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <span
                    class="ant-input-affix-wrapper ant-input-affix-wrapper-status-success ant-input-affix-wrapper-has-feedback"
                  >
                    <input
                      class="ant-input"
                      id="name"
                      type="text"
                      value="mDNS Proxy 123"
                    />
                    <span
                      class="ant-input-suffix"
                    >
                      <span
                        class="ant-form-item-feedback-icon ant-form-item-feedback-icon-success"
                      >
                        <span
                          aria-label="check-circle"
                          class="anticon anticon-check-circle"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="check-circle"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="tags"
                title="Tags"
              >
                Tags
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="tags"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="forwardingRules"
                title="Forwarding Rules"
              >
                Forwarding Rules
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="styledComponents__Wrapper-sc-1abm7iv-12 cbnATm"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                      style="display: flex; justify-content: flex-end;"
                    >
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                          type="button"
                        >
                          <span>
                            Add Rule
                          </span>
                        </button>
                      </div>
                    </div>
                    <div
                      class="ant-pro-table"
                    >
                      <div
                        class="ant-pro-card"
                      >
                        <div
                          class="ant-pro-card-body"
                          style="padding-top: 0px;"
                        >
                          <div
                            class="ant-pro-table-list-toolbar"
                          >
                            <div
                              class="ant-pro-table-list-toolbar-container"
                            >
                              <div
                                class="ant-pro-table-list-toolbar-left"
                              />
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <div
                                    class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-setting-items"
                                  >
                                    <div
                                      class="ant-space-item"
                                    >
                                      <div
                                        class="ant-pro-table-list-toolbar-setting-item"
                                      >
                                        <svg>
                                          SettingsOutlined.svg
                                        </svg>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-table-wrapper"
                          >
                            <div
                              class="ant-spin-nested-loading"
                            >
                              <div
                                class="ant-spin-container"
                              >
                                <div
                                  class="ant-table ant-table-middle ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                                >
                                  <div
                                    class="ant-table-container"
                                  >
                                    <div
                                      class="ant-table-content"
                                      style="overflow-x: auto; overflow-y: hidden;"
                                    >
                                      <table
                                        style="min-width: 100%; table-layout: auto;"
                                      >
                                        <colgroup>
                                          <col
                                            class="ant-table-selection-col"
                                          />
                                          <col />
                                          <col />
                                          <col />
                                          <col
                                            style="width: 32px;"
                                          />
                                        </colgroup>
                                        <thead
                                          class="ant-table-thead"
                                        >
                                          <tr>
                                            <th
                                              class="ant-table-cell ant-table-selection-column react-resizable"
                                            >
                                              <div
                                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                              />
                                              <div
                                                class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                              />
                                            </th>
                                            <th
                                              class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                              tabindex="0"
                                            >
                                              <div
                                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                              />
                                              <div
                                                class="ant-table-column-sorters"
                                              >
                                                <span
                                                  class="ant-table-column-title"
                                                >
                                                  Type
                                                </span>
                                                <span
                                                  class="ant-table-column-sorter ant-table-column-sorter-full"
                                                >
                                                  <span
                                                    class="ant-table-column-sorter-inner"
                                                  >
                                                    <span
                                                      aria-label="caret-up"
                                                      class="anticon anticon-caret-up ant-table-column-sorter-up"
                                                      role="img"
                                                    >
                                                      <svg
                                                        aria-hidden="true"
                                                        data-icon="caret-up"
                                                        fill="currentColor"
                                                        focusable="false"
                                                        height="1em"
                                                        viewBox="0 0 1024 1024"
                                                        width="1em"
                                                      >
                                                        <path
                                                          d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                                        />
                                                      </svg>
                                                    </span>
                                                    <span
                                                      aria-label="caret-down"
                                                      class="anticon anticon-caret-down ant-table-column-sorter-down"
                                                      role="img"
                                                    >
                                                      <svg
                                                        aria-hidden="true"
                                                        data-icon="caret-down"
                                                        fill="currentColor"
                                                        focusable="false"
                                                        height="1em"
                                                        viewBox="0 0 1024 1024"
                                                        width="1em"
                                                      >
                                                        <path
                                                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                                        />
                                                      </svg>
                                                    </span>
                                                  </span>
                                                </span>
                                              </div>
                                              <div
                                                class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                              />
                                            </th>
                                            <th
                                              class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                              tabindex="0"
                                            >
                                              <div
                                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                              />
                                              <div
                                                class="ant-table-column-sorters"
                                              >
                                                <span
                                                  class="ant-table-column-title"
                                                >
                                                  From VLAN
                                                </span>
                                                <span
                                                  class="ant-table-column-sorter ant-table-column-sorter-full"
                                                >
                                                  <span
                                                    class="ant-table-column-sorter-inner"
                                                  >
                                                    <span
                                                      aria-label="caret-up"
                                                      class="anticon anticon-caret-up ant-table-column-sorter-up"
                                                      role="img"
                                                    >
                                                      <svg
                                                        aria-hidden="true"
                                                        data-icon="caret-up"
                                                        fill="currentColor"
                                                        focusable="false"
                                                        height="1em"
                                                        viewBox="0 0 1024 1024"
                                                        width="1em"
                                                      >
                                                        <path
                                                          d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                                        />
                                                      </svg>
                                                    </span>
                                                    <span
                                                      aria-label="caret-down"
                                                      class="anticon anticon-caret-down ant-table-column-sorter-down"
                                                      role="img"
                                                    >
                                                      <svg
                                                        aria-hidden="true"
                                                        data-icon="caret-down"
                                                        fill="currentColor"
                                                        focusable="false"
                                                        height="1em"
                                                        viewBox="0 0 1024 1024"
                                                        width="1em"
                                                      >
                                                        <path
                                                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                                        />
                                                      </svg>
                                                    </span>
                                                  </span>
                                                </span>
                                              </div>
                                              <div
                                                class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                              />
                                            </th>
                                            <th
                                              class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                              tabindex="0"
                                            >
                                              <div
                                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                              />
                                              <div
                                                class="ant-table-column-sorters"
                                              >
                                                <span
                                                  class="ant-table-column-title"
                                                >
                                                  To VLAN
                                                </span>
                                                <span
                                                  class="ant-table-column-sorter ant-table-column-sorter-full"
                                                >
                                                  <span
                                                    class="ant-table-column-sorter-inner"
                                                  >
                                                    <span
                                                      aria-label="caret-up"
                                                      class="anticon anticon-caret-up ant-table-column-sorter-up"
                                                      role="img"
                                                    >
                                                      <svg
                                                        aria-hidden="true"
                                                        data-icon="caret-up"
                                                        fill="currentColor"
                                                        focusable="false"
                                                        height="1em"
                                                        viewBox="0 0 1024 1024"
                                                        width="1em"
                                                      >
                                                        <path
                                                          d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                                        />
                                                      </svg>
                                                    </span>
                                                    <span
                                                      aria-label="caret-down"
                                                      class="anticon anticon-caret-down ant-table-column-sorter-down"
                                                      role="img"
                                                    >
                                                      <svg
                                                        aria-hidden="true"
                                                        data-icon="caret-down"
                                                        fill="currentColor"
                                                        focusable="false"
                                                        height="1em"
                                                        viewBox="0 0 1024 1024"
                                                        width="1em"
                                                      >
                                                        <path
                                                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                                        />
                                                      </svg>
                                                    </span>
                                                  </span>
                                                </span>
                                              </div>
                                              <div
                                                class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                              />
                                            </th>
                                            <th
                                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first react-resizable"
                                              style="position: sticky; right: 0px;"
                                            >
                                              <div
                                                class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                              />
                                              <div
                                                class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                              />
                                            </th>
                                          </tr>
                                        </thead>
                                        <tbody
                                          class="ant-table-tbody"
                                        >
                                          <tr
                                            aria-hidden="true"
                                            class="ant-table-measure-row"
                                            style="height: 0px; font-size: 0px;"
                                          >
                                            <td
                                              style="padding: 0px; border: 0px; height: 0px;"
                                            >
                                              <div
                                                style="height: 0px; overflow: hidden;"
                                              >
                                                 
                                              </div>
                                            </td>
                                            <td
                                              style="padding: 0px; border: 0px; height: 0px;"
                                            >
                                              <div
                                                style="height: 0px; overflow: hidden;"
                                              >
                                                 
                                              </div>
                                            </td>
                                            <td
                                              style="padding: 0px; border: 0px; height: 0px;"
                                            >
                                              <div
                                                style="height: 0px; overflow: hidden;"
                                              >
                                                 
                                              </div>
                                            </td>
                                            <td
                                              style="padding: 0px; border: 0px; height: 0px;"
                                            >
                                              <div
                                                style="height: 0px; overflow: hidden;"
                                              >
                                                 
                                              </div>
                                            </td>
                                            <td
                                              style="padding: 0px; border: 0px; height: 0px;"
                                            >
                                              <div
                                                style="height: 0px; overflow: hidden;"
                                              >
                                                 
                                              </div>
                                            </td>
                                          </tr>
                                          <tr
                                            class="ant-table-row ant-table-row-level-0"
                                            data-row-key="AIRPLAY"
                                          >
                                            <td
                                              class="ant-table-cell ant-table-selection-column"
                                            >
                                              <label
                                                class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                              >
                                                <span
                                                  class="ant-radio"
                                                >
                                                  <input
                                                    class="ant-radio-input"
                                                    type="radio"
                                                    value=""
                                                  />
                                                  <span
                                                    class="ant-radio-inner"
                                                  />
                                                </span>
                                              </label>
                                            </td>
                                            <td
                                              class="ant-table-cell"
                                            >
                                              AirPlay
                                            </td>
                                            <td
                                              class="ant-table-cell"
                                            >
                                              10
                                            </td>
                                            <td
                                              class="ant-table-cell"
                                            >
                                              20
                                            </td>
                                            <td
                                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                              style="position: sticky; right: 0px;"
                                            />
                                          </tr>
                                          <tr
                                            class="ant-table-row ant-table-row-level-0"
                                            data-row-key="AIRDISK"
                                          >
                                            <td
                                              class="ant-table-cell ant-table-selection-column"
                                            >
                                              <label
                                                class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                              >
                                                <span
                                                  class="ant-radio"
                                                >
                                                  <input
                                                    class="ant-radio-input"
                                                    type="radio"
                                                    value=""
                                                  />
                                                  <span
                                                    class="ant-radio-inner"
                                                  />
                                                </span>
                                              </label>
                                            </td>
                                            <td
                                              class="ant-table-cell"
                                            >
                                              AirDisk
                                            </td>
                                            <td
                                              class="ant-table-cell"
                                            >
                                              21
                                            </td>
                                            <td
                                              class="ant-table-cell"
                                            >
                                              30
                                            </td>
                                            <td
                                              class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                              style="position: sticky; right: 0px;"
                                            />
                                          </tr>
                                        </tbody>
                                      </table>
                                    </div>
                                  </div>
                                </div>
                                <ul
                                  class="ant-pagination ant-pagination-mini ant-table-pagination ant-table-pagination-center"
                                  unselectable="unselectable"
                                >
                                  <li
                                    aria-disabled="true"
                                    class="ant-pagination-prev ant-pagination-disabled"
                                    title="Previous Page"
                                  >
                                    <button
                                      class="ant-pagination-item-link"
                                      disabled=""
                                      tabindex="-1"
                                      type="button"
                                    >
                                      <span
                                        aria-label="left"
                                        class="anticon anticon-left"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="left"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                                          />
                                        </svg>
                                      </span>
                                    </button>
                                  </li>
                                  <li
                                    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                                    tabindex="0"
                                    title="1"
                                  >
                                    <a
                                      rel="nofollow"
                                    >
                                      1
                                    </a>
                                  </li>
                                  <li
                                    aria-disabled="true"
                                    class="ant-pagination-next ant-pagination-disabled"
                                    title="Next Page"
                                  >
                                    <button
                                      class="ant-pagination-item-link"
                                      disabled=""
                                      tabindex="-1"
                                      type="button"
                                    >
                                      <span
                                        aria-label="right"
                                        class="anticon anticon-right"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="right"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                                          />
                                        </svg>
                                      </span>
                                    </button>
                                  </li>
                                </ul>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
